--- a/style.css
+++ b/style.css
@@ -1,2 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-
+html,
+body {
+    /* display: flex; */
+    width: 100%;
+    height: 100%;   
+}
